@@ -173,6 +173,9 @@ Unreleased changes (1.0-dev)
     index-basic plugin. For backwards compatibility, add index-anchor plugin to 
     nutch-site.xml plugin.includes. (kubes)
 
+60. NUTCH-581 - DistributedSearch does not update search servers added to 
+    search-servers.txt on the fly.  (Rohan Mehta via kubes)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
